--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <div class="section-title">My Work</div>
     <div class="projects">
       <div class="project">
-        <img src="C:\Users\msi\Desktop\Audiobooks\ChatGPT Image 21 sept. 2025, 14_41_37.png" alt="Medical Java Poster" />
+        <img src="image/ChatGPT Image 21 sept. 2025, 14_41_13.png" alt="Medical Java Poster" />
         <h3>Medical Java Poster</h3>
       </div>
       <div class="project">
