--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
         <h3>Medical Java Poster</h3>
       </div>
       <div class="project">
-        <img src="image/canva.png" alt="Minimal Web Ad" />
+        <img src="image/Gemini_Generated_Image_sakrnssakrnssakr.png" alt="Minimal Web Ad" />
         <h3>Minimal Web Ad</h3>
       </div>
     </div>
